UX-5. fix Todo List action buttons not aligned. used flexbox to align buttons.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,6 +68,10 @@ body {
   cursor: pointer;
 }
 
+.margin-left-auto {
+  margin-left: auto;
+}
+
 .modal {
   top: 40px;
   z-index: 1;
